--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div v-if="(tmp.gameEnded && !player.keepGoing)" class="fullWidth">
 			<br>
 			<h2>{{modInfo.name}} {{VERSION.withoutName}}</h2><br><br>
-			<h3>抵达残局：1俊</h3><br><br>
+			<h3>抵达残局：75总冬瓜币</h3><br><br>
 			<div v-if="!player.timePlayedReset">你的通关时间是 {{formatTime(player.timePlayed)}} </div>
 			<br><button class="longUpg can" onclick="keepGoing()">继续</button>
 		</div>
